Wed Jun 30 14:54:48 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Version 0.8.1; Corrected --without-tcl help to say
	  it disables Tcl (not Java!) and list the SWIG bindings which
	  --without-swig disables; note that SWIG 1.3.21 isn't relevant
	  and the SWIG changelog URL.

Wed Jun 30 00:09:58 BST 2004  Olly Betts <olly@survex.com>

	* NEWS: Updated for 0.8.1 release.

Tue Jun 29 23:26:36 BST 2004  Eric B. Ridge <ebr@tcdi.com>

	* java/native/,java/org/xapian/: Updates to java bindings:
	  - cleanup usages of XapianObjectHolder to be  explicitly created
	    during library initialization
	  - make finalize() methods of Database and WritableDatabase public so
	    they can be called from the outside world (should probably have
	    added explicit close() methods instead).
	  - deprecate document_add_term_nopos(); completely remove from C++
	    wrapper

Tue Jun 29 17:30:17 BST 2004  Richard Boulton <richard@tartarus.org>

	* Makefile.am: Remove Debian files from distribution tarballs,
	  since there will often be multiple patch releases for each
	  release.  Debian files will be available from an apt repository
	  in future.

Tue Jun 29 01:20:22 BST 2004  Eric B. Ridge <ebr@tcdi.com>

	* java/org/xapian/errors/: Removed wrappers for unused error classes
	  which have been pruned from C++.

Sun Jun 27 00:57:25 BST 2004  Olly Betts <olly@survex.com>

	* java/org/xapian/errors/.cvsignore,
	  java/org/xapian/examples/.cvsignore: Created.

Fri May 28 14:35:29 BST 2004  James Aylett  <james@tartarus.org>

	* Add basic documentation and examples to PHP4 bindings.

	* For PHP4, rename overloaded methods and constructors.

	* Add simple access to the prefixes map in QueryParser.

	* Correct simpleindex ports to never generate empty termnames.

Wed May 26 16:18:47 BST 2004  Olly Betts <olly@survex.com>

	* configure.in: Require SWIG 1.3.20 or higher.

Wed May 26 14:51:50 BST 2004  Olly Betts <olly@survex.com>

	* xapian.i: Removed bogus extra ")".
